Fix tabview spacing

--- a/labeling-ui/Styles/_form.scss
+++ b/labeling-ui/Styles/_form.scss
@@ -32,7 +32,7 @@ form{
   .button-area {
     margin: 0 17px;
     .button-text{
-      margin-right: 15px;font-size: 14px;
+      margin-right: 10px;
       @include font-s();
     }
   }
